--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.thymeleaf.servlet.content-type=text/html
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Lihai123..
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost/blog?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 
 spring.jpa.hibernate.ddl-auto=update
@@ -15,5 +15,5 @@ spring.jpa.show-sql=true
 
 spring.thymeleaf.mode=LEGACYHTML5
 
-#这个问题整了我一整天，mmp
+#杩欎釜闂鏁翠簡鎴戜竴鏁村ぉ锛宮mp
 spring.jmx.enabled=false
