--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 
 spring.http.encoding.charset=UTF-8
 
-server.servlet.context-path=/blog
+server.servlet.context-path=/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.servlet.content-type=text/html
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost/blog?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blog?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.thymeleaf.mode=LEGACYHTML5
 
-#这个问题整了我一整天，mmp
+
 spring.jmx.enabled=false
