--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,26 @@
         	<artifactId>shiro-spring</artifactId>
         	<version>1.2.2</version>
         </dependency>
+         <dependency>
+              <groupId>org.apache.shiro</groupId>
+              <artifactId>shiro-cas</artifactId>
+              <version>1.2.3</version>
+          </dependency>
+          <dependency>
+              <groupId>org.apache.shiro</groupId>
+              <artifactId>shiro-ehcache</artifactId>
+              <version>1.2.3</version>
+          </dependency>
+           <dependency>
+              <groupId>org.apache.shiro</groupId>
+              <artifactId>shiro-core</artifactId>
+              <version>1.2.3</version>
+          </dependency>
+          <dependency>
+              <groupId>org.apache.shiro</groupId>
+              <artifactId>shiro-web</artifactId>
+              <version>1.2.3</version>
+          </dependency>
     </dependencies>
 
     <build>
